# autonomous_cave_navigation

./: .gitignore  AutonomousSystems2025.txt  README.md  small_guide.txt  test.txt
ros2_ws/src/cave_explorer/: package.xml  setup.py
ros2_ws/src/cave_explorer/cave_explorer/: cave_explorer_node.py  depth_to_pointcloud.py
ros2_ws/src/cave_explorer/config/: cave_explorer_params.yaml
ros2_ws/src/cave_explorer/launch/: cave_explorer.launch.py  mapping.launch.py
ros2_ws/src/cave_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/cave_navigation/launch/: cave_exploration.launch.py  cave_exploration_2.launch.py  integrated_mission.launch.py
ros2_ws/src/cave_navigation/rviz/: cave_navigation.rviz
ros2_ws/src/controller_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/controller_pkg/config/: controller_params.yaml
ros2_ws/src/controller_pkg/launch/: controller.launch.py
ros2_ws/src/controller_pkg/src/: controller_node.cpp
ros2_ws/src/frontier_detector/: CMakeLists.txt  package.xml
ros2_ws/src/frontier_detector/src/: frontier_detector_node.cpp
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/install/lantern_detection_pkg/share/lantern_detection_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/src/lantern_detection_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/lantern_detection_pkg/config/: config.yaml
ros2_ws/src/lantern_detection_pkg/launch/: detection_node.launch.py
ros2_ws/src/lantern_detection_pkg/src/: detection_node.cpp
ros2_ws/src/log/: latest_build
ros2_ws/src/mission_control/: CMakeLists.txt  package.xml
ros2_ws/src/mission_control/config/: mission_control_params.yaml
ros2_ws/src/mission_control/launch/: mission_control.launch.py
ros2_ws/src/mission_control/src/: mission_control_node.cpp
ros2_ws/src/octomap_mapping/octomap_server/launch/: perception_mapping.launch.py
ros2_ws/src/rrt_planner/: CMakeLists.txt  package.xml
ros2_ws/src/rrt_planner/src/: rrt_planner_node.cpp
ros2_ws/src/sampling_based_traj_gen/: CMakeLists.txt  package.xml
ros2_ws/src/sampling_based_traj_gen/src/: sampling_planner_node.cpp
ros2_ws/src/simulation/: CMakeLists.txt  package.xml
ros2_ws/src/simulation/launch/: simulation.launch.py
ros2_ws/src/trajectory_generator/: CMakeLists.txt  package.xml
ros2_ws/src/trajectory_generator/src/: trajectory_generator_node.cpp
ros2_ws/src/trajectory_planner/: CMakeLists.txt  package.xml
ros2_ws/src/trajectory_planner/config/: trajectory_planner_params.yaml
ros2_ws/src/trajectory_planner/launch/: trajectory_planner.launch.py
ros2_ws/src/trajectory_planner/src/: trajectory_planner_node.cpp
