<?xml version="1.0"?>
<package format="3">
  <name>mission_control</name>
  <version>0.0.1</version>
  <description>Mission control state machine for autonomous cave navigation</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core deps -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
