<?xml version="1.0"?>
<package format="3">
  <name>trajectory_planner</name>
  <version>0.0.1</version>
  <description>Trajectory planner for autonomous cave navigation using mav_trajectory_generation</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Core deps -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- MAV specific deps -->
  <depend>mav_msgs</depend>
  <depend>mav_planning_msgs</depend>
  <depend>mav_trajectory_generation</depend>
  
  <!-- Eigen -->
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
